# Gateway_Control_System

./: .gitignore  CMakeLists.txt  README.md  tips.md
config/: defconfig.ini  defconfig.json  other.json
docker/: Dockerfile
driver/: CMakeLists.txt  功能说明.md
driver/commdevice/: CMakeLists.txt  commdevice.cpp  commdevice.h  commdevice.hpp  opticalfiber.cpp  radiodigital.cpp  satellite.cpp  underwateracoustic.cpp
driver/ethernet/: CMakeLists.txt
driver/filetransfer/: CMakeLists.txt  filetransfer.h  filetransfer.hpp  serialchannel.cpp  serialfiletransfer.cpp  tcpchannel.cpp  tcpchannel.h  tcpfiletransfer.cpp  transchannel.cpp  transchannel.h
driver/serial/: CMakeLists.txt  serial.cpp  serial.h
logs/: C_2023-10-27
reactor/: CMakeLists.txt  event.cpp  event.h  event.hpp  processor.cpp  processor.h  processor.hpp  queue.cpp  queue.h  reactor.cpp  reactor.h  reactor.hpp  source.cpp  source.h  source.hpp  功能需求.md
scripts/: init_apache2.sh  init_rabbitmqserver.sh  init_virtualserial.sh
storage/: recv_test.txt
test/: CMakeLists.txt  device_control.cpp  exec_management.cpp  module_test.cpp  pressure_test.cpp  test.cpp  test_driver.cpp  test_googletest.cpp  test_logger.cpp  test_queue.cpp  test_rabbitmq.cpp  test_reactor.cpp  test_serial.cpp  十六进制输出字符串.py  测试函数  测试函数.cpp
utility/: CMakeLists.txt  功能需求.md
utility/configparser/: CMakeLists.txt  configparser.cpp  configparser.h  configparser.hpp  功能需求.md
utility/logger/: CMakeLists.txt  logger.cpp  logger.h  logger.hpp  需求功能.md
utility/rabbitmqclient/: CMakeLists.txt  rabbitmqclient.cpp  rabbitmqclient.h  rabbitmqclient.hpp
utility/safecontainer/: CMakeLists.txt  safecontainer.cpp  safemap.h  safemap.hpp  safequeue.h  safequeue.hpp
utility/safequeue/: CMakeLists.txt  rwqueue.cpp  rwqueue.h  safequeue.cpp  safequeue.h
utility/singleton/: CMakeLists.txt  singleton.cpp  singleton.h  singleton.hpp  需求功能.md
utility/systime/: CMakeLists.txt  systime.cpp  systime.h  systime.hpp
utility/threadpool/: CMakeLists.txt  threadpool.cpp  threadpool.h  threadpool.hpp
